기능만 구현